FRO-4-fix-1|Refactor: ILLUSTRATOR 2. (PLUS SCENERY) FRO-4-fix-2|Bug-fix: Fix slight overflow - fixed overflow on text-overflow style
https://linear.app/hng-team-clutch/issue/FRO-4/illustrator-2-plus-scenery

--- a/src/pages/scenery/scenery.module.css
+++ b/src/pages/scenery/scenery.module.css
@@ -30,20 +30,22 @@
 
 .figureContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .figure {
   width: 100%;
-  padding: 20px 10px;
+  padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .figCaption {
   padding: 10px 0 10px 0;
+  width: 100%;
 }
 .image {
   border-radius: 8px;
@@ -82,6 +84,7 @@
   white-space: nowrap; 
   overflow: hidden;
   text-overflow: ellipsis; 
+  border: #1c4cb6 1px solid;
 }
 
 .ellipsis {
@@ -125,6 +128,7 @@
 
   .figureContainer {
     align-items: flex-start;
+    justify-content: space-between;
   }
   .figure {
     width: 400px;
